bookstack/bookstack.yml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  labels:
    app: bookstack
spec:
  selector:
    app: bookstack
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookstack
spec:
  serviceName: bookstack
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
      - name: bookstack
        image: linuxserver/bookstack:version-v21.04.6
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets
          mountPath: /secrets
          readOnly: true
        - mountPath: /config
          name: data
        resources:
          limits:
            memory: 300Mi
          requests:
            cpu: 300m
            memory: 100Mi
      volumes:
      - name: secrets
        secret:
          secretName: bookstack
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: longhorn
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
